# shade-proxy

./: LICENSE  README.md  pyproject.toml  run.py
proxy/: __init__.py  __main__.py
proxy/providers/: abc_provider.py  gcs.py
proxy/server/: application.py
proxy/server/api/: __init__.py  views.py
proxy/server/api/io/: views.py
proxy/server/api/shade/: views.py
